Fixed two issues for the "rise" animation: - Safari-only: animation was not showing at all in the bottom half of the number container. - All browsers: the turning page was smaller during the animation in the bottom half of the number container.

--- a/jquery.flipper.css
+++ b/jquery.flipper.css
@@ -140,11 +140,11 @@
 
 /* Rise Transition */
 .flipper.fl-rise.fl-go .fl-show.fl-bottom {
-    -moz-transform: perspective(500px) rotatex(-90deg);
-    -ms-transform: perspective(500px) rotatex(-90deg);
-    -o-transform: perspective(500px) rotatex(-90deg);
-    -webkit-transform: perspective(500px) rotatex(-90deg);
-    transform: perspective(500px) rotatex(-90deg)
+    -moz-transform: perspective(500px) rotatex(90deg);
+    -ms-transform: perspective(500px) rotatex(90deg);
+    -o-transform: perspective(500px) rotatex(90deg);
+    -webkit-transform: perspective(500px) rotatex(90deg);
+    transform: perspective(500px) rotatex(90deg)
     }
 
 .flipper.fl-rise.fl-go .fl-new.fl-top {
